
History
-------

Latest snapshot:
	* Added support for ISO 8601 date and time format.
	* Added support for Sitemap: command in robots.txt file.
	* Support for libextractor 0.6.x has been added.
	* -G switch for indexer takes now an integral value for all threads.
	* Clones detection in search is now disabled by default.
	* StopwordsLoose command has been added.
	* hash32 function has been fixed for 64-bit systems. Total reindexing is required if affected.
	* XML Entity Definitions for Characters have been updated to the W3C Recommendation 01 April 2010.
	* Options "add", "update" or "delete" has been added the the ActionSQL command.
	* Initialization of wf has been changed so the weight for highest section number specified is propagated for the rest sections.
	* The "single" option for Section command has been added.
	* Another URL randomazing for indexing algorithm has been implemented. Use -rr switch to indexer to activate.
	* Unicode data has been updated to 5.2.0 version.
	* aspell checking has been improved, configure doesn't stop anymore if there is no aspell installed and aspell support hasn't been enabled explicitly.
	
24 Jan 2010: 4.53
	* ReverseAliasProg command has been added.
	* A faster hash function implemented. You need to configure with --enable-hashcompatible switch when upgrade without reindexing.
	* Template meta-variables are now rounded on a space or a puntuation mark.
	* ExcerptMark command has been added. Use it to alter the delimiter of excerpt chunks.
	* Match: command has been added for stopwords files.
	* A bug of loosing last line before writing into storedoc database has been fixed.
	* Added support for chunked Transfer Encoding.
	* Improved support for Internationalized Domain Names (IDN).
	* $(grand_total) template meta-variable has been added. Use it to show the number of URL found before grouping by site.
	* -Esitemap command has been added for indexer. Use it to make a sitemap listing. All filtering options aplly.